unpackaged/main/default/objects/npsp__Data_Import_Field_Mapping__mdt/npsp__Data_Import_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Used for Data Import Advanced Mapping definitions. These are mappings of source fields on the NPSP Data Import object to target fields on standard or custom objects.</description>
    <label>Data Import Field Mapping</label>
    <pluralLabel>Data Import Field Mappings</pluralLabel>
</CustomObject>