unpackaged/main/default/objects/npsp__Data_Import_Field_Mapping__mdt/fields/npsp__Is_Deleted__c.field-meta.xml
<CustomField>
    <fullName>npsp__Is_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, indicates this record was deleted from the Data Import Advanced Mapping user interface and will be ignored during NPSP Data Import processing.</description>
    <inlineHelpText>When checked, indicates this record was deleted from the Data Import Advanced Mapping user interface and will be ignored during NPSP Data Import processing.</inlineHelpText>
    <label>Is Deleted</label>
    <type>Checkbox</type>
</CustomField>