unpackaged/main/default/objects/npsp__Data_Import_Field_Mapping__mdt/fields/npsp__Required__c.field-meta.xml
<CustomField>
    <fullName>npsp__Required__c</fullName>
    <description>Indicates if the field on the NPSP Data Import object must contain a value. When it's required, Dry Run will fail if that field doesn't contain a value.</description>
    <inlineHelpText>Indicates if the field on the NPSP Data Import object must contain a value. When it's required, Dry Run will fail if that field doesn't contain a value.</inlineHelpText>
    <label>Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>