unpackaged/main/default/objects/npsp__Data_Import_Field_Mapping__mdt/fields/npsp__Target_Object_Mapping__c.field-meta.xml
<CustomField>
    <fullName>npsp__Target_Object_Mapping__c</fullName>
    <description>The target Object Group for this Field Mapping.</description>
    <inlineHelpText>The target Data Import Object Group for this field mapping.</inlineHelpText>
    <label>Target Object Mapping</label>
    <referenceTo>npsp__Data_Import_Object_Mapping__mdt</referenceTo>
    <relationshipLabel>Data Import Field Mappings</relationshipLabel>
    <relationshipName>Data_Import_Field_Mappings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>